--- a/mobile/doaae/ios/Podfile
+++ b/mobile/doaae/ios/Podfile
@@ -12,6 +12,10 @@ target 'doaae' do
     :hermes_enabled => false
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'doaaeTests' do
     inherit! :complete
     # Pods for testing
